Moved the AOT bean from java.lang.management to jdk.management